# pigweed

./: .bazelrc  WORKSPACE
pw_async_basic/: BUILD.gn
pw_bluetooth_sapphire/host/att/: bearer.cc  bearer_test.cc  database_test.cc
pw_bluetooth_sapphire/host/common/: weak_self_test.cc
pw_bluetooth_sapphire/host/gap/: adapter.cc  bredr_connection.cc  bredr_connection_manager.cc  bredr_connection_manager_test.cc  bredr_discovery_manager.cc  bredr_interrogator.cc  fake_adapter.cc  generic_access_client.cc  legacy_pairing_state.cc  legacy_pairing_state_test.cc  low_energy_address_manager.cc  low_energy_advertising_manager.cc  low_energy_advertising_manager_test.cc  low_energy_connection.cc  low_energy_connection_manager.cc  low_energy_connection_manager_test.cc  low_energy_connector.cc  low_energy_discovery_manager.cc  low_energy_interrogator.cc  pairing_state_manager.cc  secure_simple_pairing_state.cc  secure_simple_pairing_state_test.cc
pw_bluetooth_sapphire/host/gatt/: client.cc  fake_layer.cc  gatt.cc  gatt_test.cc  generic_attribute_service.cc  mock_server.cc  remote_characteristic.cc  remote_service.cc  remote_service_manager.cc  remote_service_manager_test.cc  server.cc  server_test.cc
pw_bluetooth_sapphire/host/hci/: acl_connection.cc  android_extended_low_energy_advertiser.cc  bredr_connection.cc  connection.cc  extended_low_energy_advertiser.cc  extended_low_energy_scanner.cc  fake_bredr_connection.cc  fake_low_energy_connection.cc  fake_sco_connection.cc  legacy_low_energy_scanner.cc  low_energy_advertiser.cc  low_energy_connection.cc  low_energy_connector.cc  low_energy_scanner.cc  sco_connection.cc  sequential_command_runner.cc
pw_bluetooth_sapphire/host/iso/: iso_stream.cc  iso_stream_manager.cc  iso_stream_manager_test.cc  iso_stream_test.cc
pw_bluetooth_sapphire/host/l2cap/: bredr_dynamic_channel_registry_fuzztest.cc  bredr_dynamic_channel_test.cc  bredr_signaling_channel.cc  bredr_signaling_channel_test.cc  channel.cc  channel_manager.cc  channel_manager_test.cc  dynamic_channel_registry_test.cc  fake_l2cap.cc  l2cap_fuzztest.cc  le_signaling_channel.cc  logical_link.cc  logical_link_test.cc  mock_channel_test.cc  scoped_channel.cc  scoped_channel_test.cc  signaling_channel.cc  signaling_channel_test.cc
pw_bluetooth_sapphire/host/sco/: sco_connection_manager.cc  sco_connection_manager_test.cc  sco_connection_test.cc
pw_bluetooth_sapphire/host/sdp/: client.cc  server.cc  server_test.cc
pw_bluetooth_sapphire/host/sm/: BUILD.bazel  pairing_channel.cc  pairing_channel_test.cc  pairing_phase.cc  pairing_phase_test.cc  phase_1.cc  phase_1_test.cc  phase_2_legacy.cc  phase_2_secure_connections.cc  phase_3.cc  sc_stage_1_just_works_numeric_comparison.cc  sc_stage_1_passkey.cc  security_manager.cc  security_manager_test.cc  security_request_phase.cc  test_security_manager.cc
pw_bluetooth_sapphire/host/testing/: fake_l2cap.cc  fake_l2cap_test.cc  fake_sdp_server.cc
pw_bluetooth_sapphire/host/transport/: iso_data_channel_test.cc  transport_test.cc
pw_bluetooth_sapphire/public/pw_bluetooth_sapphire/internal/host/att/: bearer.h
pw_bluetooth_sapphire/public/pw_bluetooth_sapphire/internal/host/common/: pipeline_monitor.h  weak_self.h
pw_bluetooth_sapphire/public/pw_bluetooth_sapphire/internal/host/gap/: adapter.h  bredr_connection.h  bredr_connection_manager.h  bredr_discovery_manager.h  bredr_interrogator.h  fake_adapter.h  generic_access_client.h  legacy_pairing_state.h  low_energy_address_manager.h  low_energy_advertising_manager.h  low_energy_connection.h  low_energy_connection_manager.h  low_energy_connector.h  low_energy_discovery_manager.h  low_energy_interrogator.h  pairing_state_manager.h  peer.h  secure_simple_pairing_state.h
pw_bluetooth_sapphire/public/pw_bluetooth_sapphire/internal/host/gatt/: client.h  fake_client.h  fake_layer.h  gatt.h  generic_attribute_service.h  local_service_manager.h  mock_server.h  remote_characteristic.h  remote_service.h  remote_service_manager.h  server.h
pw_bluetooth_sapphire_mcuxpresso/: BUILD.bazel  BUILD.gn  controller.cc  low_energy_advertiser.cc
pw_bluetooth_sapphire_mcuxpresso/public/pw_bluetooth_sapphire_mcuxpresso/: controller.h  low_energy_advertiser.h
pw_build_mcuxpresso/py/: BUILD.bazel  requirements_lock.txt
pw_build_mcuxpresso/py/pw_build_mcuxpresso/: __main__.py  bazel.py  bazel_compile.py  components.py  west.py
pw_digital_io_mcuxpresso/: BUILD.gn
pw_env_setup/py/pw_env_setup/virtualenv_setup/: constraint_hashes_linux.list  pigweed_upstream_requirements.txt  upstream_requirements_linux_lock.txt
pw_fastboot/: BUILD.bazel  commands.cc  device_variable.cc  device_variable_test.cc  fastboot_device.cc  fastboot_device_test.cc
pw_fastboot/lib/stringutils/: BUILD.bazel  strings.cc
pw_fastboot/lib/stringutils/public/stringutils/: strings.h
pw_fastboot/private/pw_fastboot/: command_handlers.h
pw_fastboot/private/pw_fastboot/tests/: mock_device.h  mock_hal.h  mock_transport.h
pw_fastboot/public/pw_fastboot/: commands.h  constants.h  device_hal.h  device_variable.h  fastboot_device.h  transport.h
pw_fastboot_usb/: BUILD.bazel  transport.cc  transport_test.cc
pw_fastboot_usb/private/pw_fastboot_usb/tests/: mock_packet_interface.h
pw_fastboot_usb/public/pw_fastboot_usb/: packet.h  ring_buffer.h  transport.h
pw_i2c_mcuxpresso/: BUILD.gn
pw_spi_mcuxpresso/: BUILD.gn
pw_stream_shmem_mcuxpresso/: BUILD.gn
pw_stream_uart_mcuxpresso/: BUILD.gn  stream_example.cc  stream_test.cc
pw_stream_uart_mcuxpresso/public/pw_stream_uart_mcuxpresso/: stream.h
pw_usb/device/: controller.h  endpoint.h  event.h
seed/: 9999-pw_usb.rst
targets/: BUILD.bazel
targets/mimxrt595_evk/: BUILD.gn  mimxrt595_executable.gni  target_toolchains.gni
targets/mimxrt595_evk_freertos/: BUILD.bazel  BUILD.gn  binary.bzl  boot.cc  mimxrt595_executable.gni  mimxrt595_flash.ld  target_toolchains.gni
targets/renode/py/: BUILD.gn  setup.py
targets/renode/py/renode_utils/: __init__.py  stm32f4_discovery.resc  test.robot  unit_test_runner.py
(+60 files in other folders)
