load(
    "//pw_build:pigweed.bzl",
    "pw_cc_test",
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pw_fastboot",
    srcs = [
        "commands.cc",
        "device_variable.cc",
        "fastboot_device.cc",
        "private/pw_fastboot/command_handlers.h",
    ],
    hdrs = [
        "public/pw_fastboot/commands.h",
        "public/pw_fastboot/constants.h",
        "public/pw_fastboot/device_hal.h",
        "public/pw_fastboot/device_variable.h",
        "public/pw_fastboot/fastboot_device.h",
        "public/pw_fastboot/transport.h",
    ],
    includes = [
        "public/",
    ],
    deps = [
        "//pw_fastboot/lib/stringutils",
        "//pw_log",
    ],
)

pw_cc_test(
    name = "device_variable_test",
    srcs = [
        "device_variable_test.cc",
    ],
    deps = [
        ":pw_fastboot",
        "//pw_log",
        "//pw_unit_test",
    ],
)
