load("//pw_build:compatibility.bzl", "incompatible_with_mcu")
load(
    "//pw_build:pigweed.bzl",
    "pw_cc_test",
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pw_fastboot_usb",
    srcs = [
        "transport.cc",
    ],
    hdrs = [
        "public/pw_fastboot_usb/packet.h",
        "public/pw_fastboot_usb/ring_buffer.h",
        "public/pw_fastboot_usb/transport.h",
    ],
    includes = [
        "public/",
    ],
    deps = [
        "//pw_fastboot",
        "//pw_function",
        "//pw_log",
        "//pw_ring_buffer",
        "//pw_sync:counting_semaphore",
        "//pw_sync:interrupt_spin_lock",
        "//pw_sync:thread_notification",
    ],
)

pw_cc_test(
    name = "transport_test",
    srcs = [
        "private/pw_fastboot_usb/tests/mock_packet_interface.h",
        "transport_test.cc",
    ],
    includes = [
        "private/",
    ],
    # utilizes gMock, which is not available on MCU
    target_compatible_with = incompatible_with_mcu() + select({
        "//pw_unit_test:gtest_setting": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":pw_fastboot_usb",
    ],
)
