
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//pw_build:python.bzl", "pw_py_binary")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "pw_build_mcuxpresso",
    srcs = [
        "pw_build_mcuxpresso/__init__.py",
        "pw_build_mcuxpresso/bazel.py",
        "pw_build_mcuxpresso/components.py",
        "pw_build_mcuxpresso/gn.py",
        "pw_build_mcuxpresso/west.py",
    ],
    imports = ["."],
)

pw_py_binary(
    name = "mcuxpresso_builder",
    srcs = [
        "pw_build_mcuxpresso/__main__.py",
    ],
    main = "pw_build_mcuxpresso/__main__.py",
    deps = [
        ":pw_build_mcuxpresso",
        "@pypi//west:pkg",
    ],
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    requirements_windows = "requirements_windows.txt",
)
